<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IPTV Player</string>
    <string name="browse_title">My Channels</string>
    <string name="settings">Settings</string>
    <string name="epg">TV Guide</string>
    <string name="favorites">Favorites</string>
    <string name="all_channels">All Channels</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="playlist_url">Playlist URL</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="play">Play</string>
    <string name="previous">Previous</string>
    <string name="loading">Loading...</string>
    <string name="no_channels">No channels available. Add a playlist to get started.</string>
    <string name="error_loading">Error loading content</string>
    <string name="enter_url">Enter M3U URL</string>
    <string name="enter_name">Enter playlist name</string>
    <string name="epg_url">EPG URL (XML/XMLTV)</string>
    <string name="refresh">Refresh</string>
    <string name="player_settings">Player Settings</string>
    <string name="buffer_size">Buffer Size</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="decoder">Decoder</string>
    <string name="auto">Auto</string>
    <string name="hardware">Hardware</string>
    <string name="software">Software</string>
    <string name="fit">Fit</string>
    <string name="fill">Fill</string>
    <string name="zoom">Zoom</string>
    <string name="now_playing">Now Playing</string>
    <string name="next">Next</string>
    <string name="record">Record</string>
    <string name="catch_up">Catch Up</string>
    <string name="search_hint">Search channels...</string>
</resources>
