<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/playlist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary" />

    <EditText
        android:id="@+id/playlist_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_url"
        android:inputType="textUri"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary" />

    <EditText
        android:id="@+id/epg_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/epg_url"
        android:inputType="textUri"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary" />

</LinearLayout>
